--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "classnames": "^2.5.1",
     "cors": "^2.8.5",
     "react": "^18.3.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
